# tailwind-dash

./: .gitignore  app.py  pyproject.toml  tailwind.config.js
apps/dashboard/: callbacks.py  dashboard.py  layout.py  test.py  urls.py  views.py
apps/dashboard/templates/: dashboard.html
apps/home/: urls.py  views.py
static/css/: output.css
tailwind/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  dashboard.html  home.html
templates/components/: navbar.html
