[tool.poetry]
name = "tailwind-dash"
version = "0.1.0"
description = "Test environment for integrating Dash and TailwindCSS"
authors = ["Christian <christiandhubbs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tailwind_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
dash = "^2.8.1"
django = "3.2.17"
django-plotly-dash = "^2.1.3"
yfinance = "^0.2.10"
whitenoise = "^6.3.0"
dpd-static-support = "^0.0.5"
django-tailwind = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
